--- a/KeySystem/index.html
+++ b/KeySystem/index.html
@@ -81,7 +81,7 @@
     <span class="card-desc">This is your validation key.</span>
     <div class="key-container">
     <span class="card-icon"><i class="material-icons">vpn_key</i></span>
-    <iframe style="position: relative; left: 38px; border-radius: 5px; overflow: hidden;" src="key.txt" height = "45"  width = "370">
+    <iframe style="position: relative; left: 38px; border-radius: 5px; overflow: hidden;" src="https://raw.githubusercontent.com/EternalDarkness-Hub/EternalDrakness-Hub-KeySystem/main/Key" height = "45"  width = "370">
         Your Browser doesn't support Frames!
     </iframe>
     </div>
