--- a/KeySystem/index.html
+++ b/KeySystem/index.html
@@ -81,13 +81,12 @@
     <span class="card-desc">This is your validation key.</span>
     <div class="key-container">
     <span class="card-icon"><i class="material-icons">vpn_key</i></span>
-    <iframe style="position: relative; left: 38px; border-radius: 5px; overflow: hidden;" src="http://gist-it.sudarmuthu.com/https://github.com/EternalDarkness-Hub/EternalDrakness-Hub-KeySystem/blob/main/Key" height = "45"  width = "370">
+    <iframe style="position: relative; left: 38px; border-radius: 5px; overflow: hidden;" src="http://google.com" height = "45"  width = "370">
         Your Browser doesn't support Frames!
     </iframe>
     </div>
     
     </div>
     </div>
-    <script src="http://gist-it.sudarmuthu.com/https://github.com/EternalDarkness-Hub/EternalDrakness-Hub-KeySystem/blob/main/Key"></script>
     
     </body></html>
