--- a/KeySystem/index.html
+++ b/KeySystem/index.html
@@ -81,9 +81,7 @@
     <span class="card-desc">This is your validation key.</span>
     <div class="key-container">
     <span class="card-icon"><i class="material-icons">vpn_key</i></span>
-    <iframe style="position: relative; left: 38px; border-radius: 5px; overflow: hidden;" src="https://raw.githubusercontent.com/EternalDarkness-Hub/EternalDrakness-Hub-KeySystem/main/Key" height = "45"  width = "370">
-        Your Browser doesn't support Frames!
-    </iframe>
+    <script src="https://edgithub.vercel.app/embed.js?target=https%3A%2F%2Fgithub.com%2FEternalDarkness-Hub%2FEternalDrakness-Hub-KeySystem%2Fblob%2Fmain%2FKey&style=github"></script>
     </div>
     
     </div>
