--- a/KeySystem/index.html
+++ b/KeySystem/index.html
@@ -81,7 +81,7 @@
     <span class="card-desc">This is your validation key.</span>
     <div class="key-container">
     <span class="card-icon"><i class="material-icons">vpn_key</i></span>
-    <script src="https://edgithub.vercel.app/embed.js?target=https%3A%2F%2Fgithub.com%2FEternalDarkness-Hub%2FEternalDrakness-Hub-KeySystem%2Fblob%2Fmain%2FKey&style=github"></script>
+    <output> </output>
     </div>
     
     </div>
