--- a/KeySystem/index.html
+++ b/KeySystem/index.html
@@ -81,9 +81,8 @@
     <span class="card-desc">This is your validation key.</span>
     <div class="key-container">
     <span class="card-icon"><i class="material-icons">vpn_key</i></span>
-    <output> hello </output>
+    <input id="Key" type="text" placeholder="generating..."><br><br>
     </div>
-    
     </div>
     </div>
     
