--- a/KeySystem/index.html
+++ b/KeySystem/index.html
@@ -81,7 +81,7 @@
     <span class="card-desc">This is your validation key.</span>
     <div class="key-container">
     <span class="card-icon"><i class="material-icons">vpn_key</i></span>
-    <input id="Key" type="text" placeholder="generating..."><br><br>
+    <iframe src="Key.txt"></iframe>
     </div>
     </div>
     </div>
