--- a/KeySystem/index.html
+++ b/KeySystem/index.html
@@ -80,7 +80,7 @@
     <span class="card-title">EternalDarkness Validation Key</span>
     <span class="card-desc">This is your validation key.</span>
     <div class="key-container">
-    <iframe style="border-radius: 5px; left: 60px; width: 300px; height: 40px; overflow: hidden;"  src="Key.txt"></iframe>
+    <iframe style="border-radius: 5px; left: 60px; width: 300px; height: 40px; overflow: hidden;" scrolling="no"  src="Key.txt"></iframe>
     </div>
     </div>
     </div>
